kube/k8s/express-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: express-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: express
  template:
    metadata:
      labels:
        app: express
    spec:
      containers:
        - name: express
          image: ayush/express:0.0.1
          imagePullPolicy: Never
