kube/k8s/express1-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: express1-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: express1
  template:
    metadata:
      labels:
        app: express1
    spec:
      containers:
        - name: express-app-container-1
          image: ayushtiwari26/express1
          imagePullPolicy: Always
          resources:
            limits:
              memory: "2048Mi"
              cpu: "1"
            requests:
              memory: "1024Mi"
              cpu: "1"
---
apiVersion: v1
kind: Service 
metadata: 
  name: express-1-cluster-ip
spec:
  selector: 
    app: express1
  type: ClusterIP
  ports: 
    - name: express-1-cluster-ip
      protocol: TCP
      port: 8081
      targetPort: 4001
