kube/k8s/express2-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: express2-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: express2
  template:
    metadata:
      labels:
        app: express2
    spec:
      containers:
        - name: express-app-container-2
          image: ayushtiwari26/express2:5.6.1 
          imagePullPolicy: Always
          resources:
            limits:
              memory: "2048Mi"
              cpu: "1"
            requests:
              memory: "1024Mi"
              cpu: "1"
---
apiVersion: v1
kind: Service 
metadata: 
  name: express-2-cluster-ip
spec:
  selector: 
    app: express2 
  type: ClusterIP
  ports: 
    - name: express-2-cluster-ip
      protocol: TCP
      port: 8082
      targetPort: 4002
