kube/k8s/ingress-svc.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-svc
  annotations:
    kubernetes.io/ingress.class: nginx

spec:
  rules:
    - host: localhost
      http:
        paths: 
          - path: /express1
            pathType: Prefix
            backend:
              service: 
                name: express-1-cluster-ip
                port: 
                  number: 80
          - path: /express2
            pathType: Prefix
            backend: 
              service:
                name: express-2-cluster-ip
                port:
                  number: 80
